renamed data agg module

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "data-aggregatinn"]
 	path = data-aggregatinn
 	url = https://github.com/mglush/data-aggregation
+[submodule "data-aggregatin"]
+	path = data-aggregatin
+	url = https://github.com/mglush/data-aggregation
