--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "data-aggregatin"]
 	path = data-aggregatin
 	url = https://github.com/mglush/data-aggregation
+[submodule "data-aggregation"]
+	path = data-aggregation
+	url = https://github.com/mglush/data-aggregation
